--- a/app/src/main/res/layout/activity_perfil_juego.xml
+++ b/app/src/main/res/layout/activity_perfil_juego.xml
@@ -9,11 +9,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvJuegos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="0dp" />
+        android:layout_height="728dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp" />
+
 </RelativeLayout>
