--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/foto_fondo"
-    tools:context=".MainActivity"
+    tools:context=".ActivityRegistrar"
     tools:ignore="ExtraText">
 
 
@@ -21,7 +21,9 @@
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
-        android:textColorHint="@android:color/white" />
+        android:textColorHint="@android:color/white"
+        android:layout_marginLeft="90dp"
+        android:layout_alignParentLeft="true" />
 
     <EditText
         android:id="@+id/etCont"
@@ -35,7 +37,9 @@
         android:ems="10"
         android:hint="@string/txtContrasenna"
         android:inputType="textPersonName"
-        android:textColorHint="@android:color/white" />
+        android:textColorHint="@android:color/white"
+        android:layout_marginLeft="90dp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/btnRegistrarse"
@@ -48,7 +52,9 @@
         android:background="@drawable/boton_redondeado"
         android:text="@string/txtCrearCuenta"
         android:textColor="@color/moradoOscuro"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="56dp" />
 
     <TextView
         android:id="@+id/tvTitulo"
@@ -60,7 +66,9 @@
         android:layout_marginTop="100dp"
         android:text="@string/txtRegistro"
         android:textColor="@android:color/white"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="151dp" />
 
     <EditText
         android:id="@+id/etNombre"
@@ -74,7 +82,9 @@
         android:ems="10"
         android:hint="@string/txtNombUsur"
         android:inputType="textPersonName"
-        android:textColorHint="@android:color/white" />
+        android:textColorHint="@android:color/white"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="90dp" />
 
     <EditText
         android:id="@+id/etConfirma"
@@ -88,6 +98,8 @@
         android:ems="10"
         android:hint="@string/txtConfirmar"
         android:inputType="textPersonName"
-        android:textColorHint="@android:color/white" />
+        android:textColorHint="@android:color/white"
+        android:layout_marginLeft="90dp"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
