--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -45,7 +45,7 @@
         android:text="genero" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/sinopsis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
