--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,26 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ActivityMenu">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="72dp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="34dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <LinearLayout
-        android:layout_width="264dp"
-        android:layout_height="447dp"
+        android:layout_width="193dp"
+        android:layout_height="431dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="147dp"
-        android:layout_marginLeft="147dp"
+        android:layout_marginStart="218dp"
+        android:layout_marginLeft="218dp"
         android:layout_marginTop="0dp"
         android:orientation="vertical">
 
@@ -53,6 +41,24 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="218dp"
+        android:layout_height="426dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
     </LinearLayout>
 
 </RelativeLayout>
