--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/foto_fondo"
-    tools:context=".ActivityRegistrar"
+    tools:context=".Login.ActivityRegistrar"
     tools:ignore="ExtraText">
 
 
@@ -21,9 +21,8 @@
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
-        android:textColorHint="@android:color/white"
-        android:layout_marginLeft="90dp"
-        android:layout_alignParentLeft="true" />
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white" />
 
     <EditText
         android:id="@+id/etCont"
@@ -35,26 +34,29 @@
         android:layout_marginTop="350dp"
         android:backgroundTint="@color/amarilloClaro"
         android:ems="10"
-        android:hint="@string/txtContrasenna"
-        android:inputType="textPersonName"
-        android:textColorHint="@android:color/white"
-        android:layout_marginLeft="90dp"
-        android:layout_alignParentLeft="true" />
+        android:hint="Contraseña"
+        android:inputType="textPassword"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white" />
 
     <Button
         android:id="@+id/btnRegistrarse"
         android:layout_width="305dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="45dp"
         android:background="@drawable/boton_redondeado"
-        android:text="@string/txtCrearCuenta"
+        android:text="Crear Cuenta"
         android:textColor="@color/moradoOscuro"
         android:textStyle="bold"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="56dp" />
+        android:layout_marginLeft="39dp" />
 
     <TextView
         android:id="@+id/tvTitulo"
@@ -62,13 +64,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="100dp"
-        android:text="@string/txtRegistro"
+        android:layout_marginStart="138dp"
+        android:layout_marginTop="118dp"
+        android:text="Registro"
         android:textColor="@android:color/white"
+
         android:textSize="30sp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="151dp" />
+        android:layout_marginLeft="138dp" />
 
     <EditText
         android:id="@+id/etNombre"
@@ -80,26 +82,18 @@
         android:layout_marginTop="200dp"
         android:backgroundTint="@color/amarilloClaro"
         android:ems="10"
-        android:hint="@string/txtNombUsur"
+        android:hint="Nombre de usuario"
         android:inputType="textPersonName"
-        android:textColorHint="@android:color/white"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="90dp" />
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white" />
 
-    <EditText
-        android:id="@+id/etConfirma"
+    <ProgressBar
+        android:id="@+id/progresbarreg"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="425dp"
-        android:backgroundTint="@color/amarilloClaro"
-        android:ems="10"
-        android:hint="@string/txtConfirmar"
-        android:inputType="textPersonName"
-        android:textColorHint="@android:color/white"
-        android:layout_marginLeft="90dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="17dp" />
 
 </RelativeLayout>
